fixed java version differences